infra/k8s/04-users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      restartPolicy: Always
      containers:
        - name: users
          image: adominguez1/users-service:latest
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: users-svc
  namespace: microapp
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - port: 3001
      targetPort: 3001
