infra/k8s/05-products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-service
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      restartPolicy: Always
      containers:
        - name: products
          image: adominguez1/products-service:latest
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: products-svc
  namespace: microapp
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
    - port: 3002
      targetPort: 3002
