infra/k8s/06-orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: microapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      restartPolicy: Always
      containers:
        - name: orders
          image: adominguez1/orders-service:latest
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: microapp
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - port: 3003
      targetPort: 3003
