infra/k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microapp-ingress
  namespace: microapp
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users-svc
                port:
                  number: 3001
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: users-svc
                port:
                  number: 3001
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: products-svc
                port:
                  number: 3002
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: orders-svc
                port:
                  number: 3003
